--- a/docs/components/layout/styles/vp-doc.scss
+++ b/docs/components/layout/styles/vp-doc.scss
@@ -353,134 +353,174 @@
 
   div[class*='language-'],
   .vp-block {
-    position: relative;
-    margin: 16px -24px;
-    background-color: var(--vp-code-block-bg);
-    overflow-x: auto;
-    transition: background-color 0.5s;
+    &:not(.co-docs-demo *) {
+      position: relative;
+      margin: 16px -24px;
+      background-color: var(--vp-code-block-bg);
+      overflow-x: auto;
+      transition: background-color 0.5s;
+    }
   }
 
   @media (min-width: 640px) {
     div[class*='language-'],
     .vp-block {
-      border-radius: 8px;
-      margin: 16px 0;
+      &:not(.co-docs-demo *) {
+        border-radius: 8px;
+        margin: 16px 0;
+      }
     }
   }
 
   @media (max-width: 639px) {
     li div[class*='language-'] {
-      border-radius: 8px 0 0 8px;
+      &:not(.co-docs-demo *) {
+        border-radius: 8px 0 0 8px;
+      }
     }
   }
 
   div[class*='language-'] + div[class*='language-'],
   div[class$='-api'] + div[class*='language-'],
   div[class*='language-'] + div[class$='-api'] > div[class*='language-'] {
-    margin-top: -8px;
+    &:not(.co-docs-demo *) {
+      margin-top: -8px;
+    }
   }
 
   [class*='language-'] pre,
   [class*='language-'] code {
-    -moz-tab-size: 4;
-    -o-tab-size: 4;
-    tab-size: 4;
+    &:not(.co-docs-demo *) {
+      -moz-tab-size: 4;
+      -o-tab-size: 4;
+      tab-size: 4;
+    }
   }
 
   [class*='language-'] pre {
-    position: relative;
-    z-index: 1;
-    margin: 0;
-    padding: 20px 0;
-    background: transparent;
-    overflow-x: auto;
-    /*rtl:ignore*/
-    text-align: left;
+    &:not(.co-docs-demo *) {
+      position: relative;
+      z-index: 1;
+      margin: 0;
+      padding: 20px 0;
+      background: transparent;
+      overflow-x: auto;
+      /*rtl:ignore*/
+      text-align: left;
+    }
   }
 
   [class*='language-'] code {
-    display: block;
-    padding: 0 24px;
-    width: fit-content;
-    min-width: 100%;
-    line-height: var(--vp-code-line-height);
-    font-size: var(--vp-code-font-size);
-    color: var(--vp-code-block-color);
-    transition: color 0.5s;
+    &:not(.co-docs-demo *) {
+      display: block;
+      padding: 0 24px;
+      width: fit-content;
+      min-width: 100%;
+      line-height: var(--vp-code-line-height);
+      font-size: var(--vp-code-font-size);
+      color: var(--vp-code-block-color);
+      transition: color 0.5s;
+    }
   }
 
   [class*='language-'] code .highlighted {
-    background-color: var(--vp-code-line-highlight-color);
-    transition: background-color 0.5s;
-    margin: 0 -24px;
-    padding: 0 24px;
-    width: calc(100% + 2 * 24px);
-    display: inline-block;
+    &:not(.co-docs-demo *) {
+      background-color: var(--vp-code-line-highlight-color);
+      transition: background-color 0.5s;
+      margin: 0 -24px;
+      padding: 0 24px;
+      width: calc(100% + 2 * 24px);
+      display: inline-block;
+    }
   }
 
   [class*='language-'] code .highlighted.error {
-    background-color: var(--vp-code-line-error-color);
+    &:not(.co-docs-demo *) {
+      background-color: var(--vp-code-line-error-color);
+    }
   }
 
   [class*='language-'] code .highlighted.warning {
-    background-color: var(--vp-code-line-warning-color);
+    &:not(.co-docs-demo *) {
+      background-color: var(--vp-code-line-warning-color);
+    }
   }
 
   [class*='language-'] code .diff {
-    transition: background-color 0.5s;
-    margin: 0 -24px;
-    padding: 0 24px;
-    width: calc(100% + 2 * 24px);
-    display: inline-block;
+    &:not(.co-docs-demo *) {
+      transition: background-color 0.5s;
+      margin: 0 -24px;
+      padding: 0 24px;
+      width: calc(100% + 2 * 24px);
+      display: inline-block;
+    }
   }
 
   [class*='language-'] code .diff::before {
-    position: absolute;
-    left: 10px;
+    &:not(.co-docs-demo *) {
+      position: absolute;
+      left: 10px;
+    }
   }
 
   [class*='language-'] .has-focused-lines .line:not(.has-focus) {
-    filter: blur(0.095rem);
-    opacity: 0.4;
-    transition:
-      filter 0.35s,
-      opacity 0.35s;
+    &:not(.co-docs-demo *) {
+      filter: blur(0.095rem);
+      opacity: 0.4;
+      transition:
+        filter 0.35s,
+        opacity 0.35s;
+    }
   }
 
   [class*='language-'] .has-focused-lines .line:not(.has-focus) {
-    opacity: 0.7;
-    transition:
-      filter 0.35s,
-      opacity 0.35s;
+    &:not(.co-docs-demo *) {
+      opacity: 0.7;
+      transition:
+        filter 0.35s,
+        opacity 0.35s;
+    }
   }
 
   [class*='language-']:hover .has-focused-lines .line:not(.has-focus) {
-    filter: blur(0);
-    opacity: 1;
+    &:not(.co-docs-demo *) {
+      filter: blur(0);
+      opacity: 1;
+    }
   }
 
   [class*='language-'] code .diff.remove {
-    background-color: var(--vp-code-line-diff-remove-color);
-    opacity: 0.7;
+    &:not(.co-docs-demo *) {
+      background-color: var(--vp-code-line-diff-remove-color);
+      opacity: 0.7;
+    }
   }
 
   [class*='language-'] code .diff.remove::before {
-    content: '-';
-    color: var(--vp-code-line-diff-remove-symbol-color);
+    &:not(.co-docs-demo *) {
+      content: '-';
+      color: var(--vp-code-line-diff-remove-symbol-color);
+    }
   }
 
   [class*='language-'] code .diff.add {
-    background-color: var(--vp-code-line-diff-add-color);
+    &:not(.co-docs-demo *) {
+      background-color: var(--vp-code-line-diff-add-color);
+    }
   }
 
   [class*='language-'] code .diff.add::before {
-    content: '+';
-    color: var(--vp-code-line-diff-add-symbol-color);
+    &:not(.co-docs-demo *) {
+      content: '+';
+      color: var(--vp-code-line-diff-add-symbol-color);
+    }
   }
 
   div[class*='language-'].line-numbers-mode {
-    /*rtl:ignore*/
-    padding-left: 32px;
+    &:not(.co-docs-demo *) {
+      /*rtl:ignore*/
+      padding-left: 32px;
+    }
   }
 
   .line-numbers-wrapper {
